@@ -52,8 +52,8 @@ configure(subprojects.findAll { ['core', 'examples'].contains(it.name) }) {
         reportLevel = "high"
     }
 
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 
     compileJava.options.compilerArgs = ['-Xlint:deprecation', '-Xlint:unchecked']
 
@@ -65,9 +65,9 @@ configure(subprojects.findAll { ['core', 'examples'].contains(it.name) }) {
     }
 
     test {
-        jvmArgs '-XX:+CMSClassUnloadingEnabled'
+        jvmArgs '--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED'
         minHeapSize = "128m"
-        maxHeapSize = "512m"
+        maxHeapSize = "768m"
         testLogging {
             exceptionFormat = 'full'
         }
